# spending-tracker

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_PRINCIPLES.md  DEVELOPMENT_NOTES.md  Dockerfile  LICENSE  README.md  compose.yaml  docker-compose.local.yml  docker-compose.prod.yml  input.md  pyproject.toml  requirements-dev.txt  requirements-telegram.txt  requirements.txt
deploy/: backup.sh  cron-setup.sh  deploy.sh  monitor.sh  update.sh
docs/: architecture.md  deploy.md  local-dev.md
scripts/: README.md  backup.sh  build-and-deploy.sh  check.sh  check_logs.sh  common-config.sh  cron-setup.sh  deploy.sh  dev.sh  download-prod-db.sh  fix-code.sh  format-code.sh  local-test.sh  monitor.sh  populate_test_data.py  update-deps.sh  update.sh
scripts/server/: backup.sh  check_logs.sh
spending_tracker/: __init__.py  __main__.py  bot.py  dal.py  expense_state.py
sql/: data-definition.sql  test-data.sql
src/: bot.rs  main.rs  model.rs
src/bot/: commands.rs  export.rs  format.rs  handlers.rs  keyboards.rs  mod.rs
src/dal/: mod.rs  models.rs  queries.rs  seed.rs
src/domain/: draft.rs  mod.rs  spending.rs
src/model/: schema.rs  test_data.rs  types.rs
src/spending_tracker/: __init__.py  __main__.py
tests/: __init__.py  test_bot.py  test_dal.py  test_expense_state.py  test_hw.py  test_main.py
