[package]
name = "spending-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.17", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
rusqlite = { version = "0.39", features = ["bundled"] }
log = "0.4"
env_logger = "0.11"
dotenv = "0.15"
